@@ -1,38 +1,35 @@
 package com.governance.governance_service.grpc;
 
-import com.audit.audit_service.grpc.AuditLogEntry;
-import com.audit.audit_service.grpc.AuditServiceGrpc;
-import com.audit.audit_service.grpc.GetAuditLogsRequest;
-import com.audit.audit_service.grpc.GetAuditLogsResponse;
-import io.grpc.StatusRuntimeException;
 import lombok.extern.slf4j.Slf4j;
-import net.devh.boot.grpc.client.inject.GrpcClient;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
+import org.springframework.web.client.RestClientException;
+import org.springframework.web.client.RestTemplate;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 @Slf4j
 @Component
 public class AuditGrpcClient {
 
-    @GrpcClient("audit-service")
-    private AuditServiceGrpc.AuditServiceBlockingStub auditServiceStub;
+    private final RestTemplate restTemplate = new RestTemplate();
 
-    public List<AuditLogEntry> getAuditLogsForPolicy(Long policyId) {
-        log.info("[gRPC] Calling audit-service for policyId={}", policyId);
+    @Value("${audit.service.url:http://localhost:8082}")
+    private String auditServiceUrl;
+
+    public List<?> getAuditLogsForPolicy(Long policyId) {
+        String url = auditServiceUrl + "/audit-logs/policy/" + policyId;
+        log.info("[Audit Client] Fetching audit logs for policyId={}", policyId);
         try {
-            GetAuditLogsRequest request = GetAuditLogsRequest.newBuilder()
-                    .setPolicyId(policyId)
-                    .build();
-
-            GetAuditLogsResponse response = auditServiceStub.getAuditLogsByPolicy(request);
-            log.info("[gRPC] Received {} logs for policyId={}", response.getLogsCount(), policyId);
-            return response.getLogsList();
-
-        } catch (StatusRuntimeException ex) {
-            log.error("[gRPC] Failed to fetch audit logs for policyId={}: {} - {}",
-                    policyId, ex.getStatus().getCode(), ex.getMessage());
-            return List.of();
+            Object[] response = restTemplate.getForObject(url, Object[].class);
+            if (response == null) return Collections.emptyList();
+            log.info("[Audit Client] Received {} logs for policyId={}", response.length, policyId);
+            return Arrays.asList(response);
+        } catch (RestClientException ex) {
+            log.error("[Audit Client] Failed to fetch audit logs for policyId={}: {}", policyId, ex.getMessage());
+            return Collections.emptyList();
         }
     }
 }
